--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="column" style="width: 100%; height: 100%; overflow: auto;">
+<div fxLayout="column">
 
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" style="margin: 15px;">
 
