--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,1 @@
-<ngx-mat-menu style="height: 100%;width: 100%;" 
-[arrMenuOptions]="arrMenuOptions" 
-[badgeColor]="badgeColor" 
-[logoutIcon]="logoutIcon"
-[srcLogo]="srcLogo" 
-[heightLogo]="heightLogo"
-[widthLogo]="widthLogo"
-[lang]="lang" 
-[themeSidebar]="themeSidebar" 
-[themeHeader]="themeHeader" 
-[visibleNotif]="visibleNotif"
-[badge]="badge"
-[defaultWidth]="'400px'"
-
-[headerPicture]="'https://www.biography.com/.image/t_share/MTY2MzU3Nzk2OTM2MjMwNTkx/elon_musk_royal_society.jpg'"
-[headerTitle]="'Elon Musk'"
-[headerSubtitle]="'emusk@gmail.com'"
-[headerTitleColor]="'black'"
-[headerSubtitleColor]="'gray'"
-
-(openNotif)="openNotif($event)"
-(profileClick)="profileClick($event)"
-(logoutEvent)="logout()">
-    <router-outlet></router-outlet>
-</ngx-mat-menu>
+<app-auth></app-auth>
