datos usuario + pagina de inicio

--- a/src/app/components/auth/auth.component.html
+++ b/src/app/components/auth/auth.component.html
@@ -3,5 +3,6 @@
 </ng-container>
 
 <ng-template #loggedOut>
-    <button (click)="auth.loginWithRedirect()">Log in</button>
+        <app-header></app-header>
+        <app-carousel></app-carousel>
 </ng-template>
