--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,10 +1,10 @@
-<ngx-mat-menu style="height: 100%;width: 100%;" 
+<ngx-mat-menu *ngIf="auth.user$ | async as user" style="height: 100%;width: 100%;" 
 [arrMenuOptions]="arrMenuOptions" 
 [badgeColor]="badgeColor" 
 [logoutIcon]="logoutIcon"
 [srcLogo]="srcLogo" 
-[heightLogo]="heightLogo"
-[widthLogo]="widthLogo"
+[heightLogo]="'50px'"
+[widthLogo]="'50px'"
 [lang]="lang" 
 [themeSidebar]="themeSidebar" 
 [themeHeader]="themeHeader" 
@@ -12,9 +12,9 @@
 [badge]="badge"
 [defaultWidth]="'400px'"
 
-[headerPicture]="'https://www.biography.com/.image/t_share/MTY2MzU3Nzk2OTM2MjMwNTkx/elon_musk_royal_society.jpg'"
-[headerTitle]="'Elon Musk'"
-[headerSubtitle]="'emusk@gmail.com'"
+[headerPicture]="user.picture"
+[headerTitle]="user.name"
+[headerSubtitle]="user.email"
 [headerTitleColor]="'black'"
 [headerSubtitleColor]="'gray'"
 
