API + Conexión Angular

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,5 @@
 <div fxLayout="column">
-
-
-    <button mat-button (click)="changeMenu()">Change Menu</button>
+    <!-- <button mat-button (click)="changeMenu()">Change Menu</button> -->
 
 
 
