--- a/src/app/carousel/carousel.component.scss
+++ b/src/app/carousel/carousel.component.scss
@@ -22,12 +22,10 @@ th[sortable].desc:before {
 	-ms-transform: rotate(180deg);
 }
 
-/* Filtering table demo */
 ngbd-table-filtering span.ngb-highlight {
 	background-color: yellow;
 }
 
-/* Complete table demo */
 ngbd-table-complete span.ngb-highlight {
 	background-color: yellow;
 }
@@ -35,7 +33,7 @@ ngbd-table-complete span.ngb-highlight {
 ngb-carousel .picsum-img-wrapper {
 	position: relative;
 	height: 0;
-	padding-top: 55%; /* Keep ratio for 900x500 images */
+	padding-top: 55%;
 }
 
 ngb-carousel .picsum-img-wrapper > img {
@@ -48,5 +46,10 @@ ngb-carousel .picsum-img-wrapper > img {
 
 img {
     width: 100%;
-    height: fit-content;
+    height: 100%;
+	opacity: 0.9;
+}
+
+:ng-deep ngb-carousel {
+	height: 100% !important;
 }
