--- a/src/app/components/auth/auth.component.html
+++ b/src/app/components/auth/auth.component.html
@@ -1,8 +1,12 @@
-<ng-container *ngIf="auth.isAuthenticated$ | async; else loggedOut">
+<!-- <ng-container *ngIf="auth.isAuthenticated$ | async; else loggedOut">
         <app-menu></app-menu>
 </ng-container>
 
 <ng-template #loggedOut>
         <app-header></app-header>
         <app-carousel></app-carousel>
-</ng-template>
+</ng-template> -->
+
+<!-- <app-products></app-products> -->
+
+<app-devices-map></app-devices-map>
