--- a/src/app/devices-map/devices-map.component.html
+++ b/src/app/devices-map/devices-map.component.html
@@ -1,1 +1,10 @@
-<p>devices-map works!</p>
+<!-- <google-map height="400px"
+            width="750px"
+            [center]="center"
+            [zoom]="zoom"
+            (mapClick)="moveMap($event)"
+            (mapMousemove)="move($event)">
+</google-map>
+
+<div>Latitude: {{display?.lat}}</div>
+<div>Longitude: {{display?.lng}}</div> -->
