--- a/src/lib/components/header/header.component.html
+++ b/src/lib/components/header/header.component.html
@@ -1,5 +1,5 @@
-<div 
-style="height: 100%;"  
+<div
+style="height: 100%;"
 [ngStyle]="theme"
 [style.border]="borderHeader"
 fxLayout="row" fxLayoutAlign="space-between center">
@@ -13,7 +13,7 @@ fxLayout="row" fxLayoutAlign="space-between center">
     </div>
     <div>
         <button mat-icon-button *ngIf="visibleNotif">
-            <mat-icon (click)="btnShowNotif_Click()" [matBadge]="badge" matBadgeColor="warn" matBadgePosition="before" [matBadgeHidden]="badge == 0">notifications_none</mat-icon>
+            <mat-icon (click)="btnShowNotif_Click()" [matBadge]="badge" matBadgeColor="warn" matBadgePosition="before" [matBadgeHidden]="badge == 0">shopping_cart</mat-icon>
         </button>
     </div>
 </div>
