--- a/src/app/product/add/add.component.html
+++ b/src/app/product/add/add.component.html
@@ -6,7 +6,7 @@
         <div class="form-group">
           <label for="name">Name</label>
           <input type="text" [(ngModel)]="newProduct.title" class="form-control" id="name" name="name"
-            placeholder="Enter your name" required #name="ngModel">
+            placeholder="Nombre dispositivo" required #name="ngModel">
         </div>
         <!-- <div [hidden]="!name.pristine" class="alert alert-danger">Name is required</div> -->
         <!-- <div class="form-group">
