app version final

--- a/src/app/blog/blog.component.scss
+++ b/src/app/blog/blog.component.scss
@@ -44,7 +44,7 @@ a.btn {
 }
 
 div.card {
-  background-color: #004481;
+  background-color: green;
   box-sizing: border-box;
   border-radius: 0%;
 }
@@ -64,7 +64,7 @@ input {
 
 .list-group {
   .list-group-item {
-    color: #004481;
+    color: green;
     text-align: center;
     font-family: 'Roboto Slab';
     background: white !important;
@@ -121,7 +121,7 @@ div.card-body {
 }
 
 .blog-post .blog-img .post-meta .read-more:hover {
-  color: #004481 !important;
+  color: green !important;
 }
 
 .blog-post .content h1,
@@ -138,7 +138,7 @@ div.card-body {
 }
 
 .blog-post .content .title:hover {
-  color: #004481 !important;
+  color: green !important;
 }
 
 .blog-post .content .author .name:hover {
@@ -195,7 +195,7 @@ div.card-body {
 .blog-post {
   a {
     text-decoration: none;
-    color: #004481 !important;
+    color: green !important;
     font-family: 'Roboto Slab';
   }
 
@@ -208,7 +208,7 @@ div.card-body {
   }
 
   h4 {
-    color: #004481 !important;
+    color: green !important;
   }
 }
 
@@ -695,7 +695,7 @@ img {
 .blog-single {
 
   p {
-    color: #004481;
+    color: green;
   }
 }
 
