--- a/src/app/blog/blog-article/blog-article.component.scss
+++ b/src/app/blog/blog-article/blog-article.component.scss
@@ -35,7 +35,7 @@
 }
 
 .blog-post .blog-img .post-meta .read-more:hover {
-  color: #004481 !important;
+  color: green !important;
 }
 
 .blog-post .content h1,
@@ -52,7 +52,7 @@
 }
 
 .blog-post .content .title:hover {
-  color: #004481 !important;
+  color: green !important;
 }
 
 .blog-post .content .author .name:hover {
@@ -109,7 +109,7 @@
 .blog-post {
   a {
     text-decoration: none;
-    color: #004481 !important;
+    color: green !important;
     font-family: 'Roboto Slab';
   }
 
@@ -122,7 +122,7 @@
   }
 
   h4 {
-    color: #004481 !important;
+    color: green !important;
   }
 }
 
