--- a/src/app/product/products/products.component.html
+++ b/src/app/product/products/products.component.html
@@ -3,7 +3,7 @@
     <mat-list-item *ngFor="let p of products; let i = index">
       <mat-card class="card">
         <mat-card-header>
-          <img src="../../../assets/img/products/{{i+1}}.jpg" alt="" width="100px" height="100px">
+          <img src="../../../assets/img/products/{{p.id}}.jpg" alt="" width="100px" height="100px">
 
           <i class="bi bi-bag-fill" (click)="buy(products, p)"></i>
         </mat-card-header>
